objects/AIA_Workplan_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>AIA_Workplan_Type_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AIA Workplan Type Task</label>
        <referenceTo>AIA_Workplan_Type_Task__c</referenceTo>
        <relationshipName>AIA_Workplan_Assignment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Account__r.Account_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>/*
BLANKVALUE(Proposal_Request_Form__r.Opportunity__r.Account.Name,  Opportunity__r.Account.Name )
*/
BLANKVALUE(Proposal_Request_Form__r.Opportunity__r.Account.Name,   Account__r.Name  )</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipName>AIA_Workplan_Assignment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Workplan Assignment</relationshipLabel>
        <relationshipName>Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Upload</fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Send</fullName>
                </value>
                <value>
                    <fullName>Confirm</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <formula>IF(ISBLANK(External_Assignee__c),IF ( ISBLANK(Owner:Queue.QueueName), 
Owner:User.FirstName + " " + Owner:User.LastName, Owner:Queue.QueueName),External_Assignee__r.FirstName+' '+External_Assignee__r.LastName)</formula>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Error__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assignment Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Workplan Assignment</relationshipLabel>
        <relationshipName>Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Accepted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dependent_Workplan_Type_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Workplan Type Task</label>
        <referenceTo>AIA_Workplan_Type_Task__c</referenceTo>
        <relationshipName>AIA_Workplan_Assignment2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Action_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Action - Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Action_Completed_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Action - Completed By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Action_Completed_On__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Action - Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Action_Target_Completion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Action - Target Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Action_Target_Start__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Action - Target Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Assignee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Workplan Assignment</relationshipLabel>
        <relationshipName>AIA_Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Assignment_Check__c</fullName>
        <description>Used in the My Assignment List view</description>
        <formula>(($User.FirstName + $User.LastName)== (Owner:User.FirstName +  Owner:User.LastName))  &amp;&amp; ((Owner:User.FirstName+" "+Owner:User.LastName) == (Assigned_To__c))</formula>
        <label>My Assignment Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>AIA_Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRF_Owner_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PRF Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PRF_Owner_Name__c</fullName>
        <formula>Proposal_Request_Form__r.Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRF Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Sales_Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Sales Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipName>AIA_Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Request Form</label>
        <referenceTo>PRF__c</referenceTo>
        <relationshipName>AIA_Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Summary__c</fullName>
        <formula>Proposal_Request_Form__r.RFP_Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFP Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reminder Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <formula>AIA_Workplan_Type_Task__r.Sequence_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stage1</fullName>
                </value>
                <value>
                    <fullName>Stage2</fullName>
                </value>
                <value>
                    <fullName>Stage3</fullName>
                </value>
                <value>
                    <fullName>Stage4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                    <default>true</default>
                    <label>Sent</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate this record is System  Generated</description>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assignment Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assignment Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assignment Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_For__c</fullName>
        <formula>TEXT(Workplan_Stage__r.Workplan_Type__r.Used_For__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Used For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplan_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplan Stage</label>
        <referenceTo>Workplan_Stage__c</referenceTo>
        <relationshipLabel>Workplan Assignment</relationshipLabel>
        <relationshipName>AIA_Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workplan_Type_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplan Type Task</label>
        <referenceTo>AIA_Workplan_Type_Task__c</referenceTo>
        <relationshipName>AIA_Workplan_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Workplan Assignment</label>
    <nameField>
        <displayFormat>WT-{000000}</displayFormat>
        <label>Workplan Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workplan Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AIA_Account_Issue_AIA_Workplan_Assignment</fullName>
        <columns>Account__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>NAME</columns>
        <columns>Post_Sales_Implementation__c</columns>
        <columns>Stage__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Operations Technical Support Queue</label>
        <queue>AIA_Account_Issue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AIA_Default_Queue_AIA_Workplan_Assignment</fullName>
        <columns>Account__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>NAME</columns>
        <columns>Post_Sales_Implementation__c</columns>
        <columns>Stage__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>AIA Admin Queue</label>
        <queue>AIA_Default_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AIA_Implementation_Queue_AIA_Workplan_Assignment</fullName>
        <columns>Account_Legal_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Post_Sales_Implementation__c</columns>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Stop Table Tech Queue</label>
        <queue>AIA_Implementation_Queue</queue>
    </listViews>
    <listViews>
        <fullName>AIA_Open_Enrollment_AIA_Workplan_Assignment</fullName>
        <columns>Account_Legal_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>AIA Open Enrollment</label>
        <queue>AIA_Open_Enrollment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AIA_Quality_Audit_AIA_Workplan_Assignment</fullName>
        <columns>Account_Legal_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>AIA Quality Audit</label>
        <queue>AIA_Quality_Audit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AIA_SWAT_AIA_Workplan_Assignment</fullName>
        <columns>Account__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>NAME</columns>
        <columns>Post_Sales_Implementation__c</columns>
        <columns>Stage__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Production ID Card Queue</label>
        <queue>AIA_SWAT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AIA_Workplan_AIA_Workplan_Assignment</fullName>
        <columns>Account__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>NAME</columns>
        <columns>Post_Sales_Implementation__c</columns>
        <columns>Stage__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>BeneFact Portal Tech Queue</label>
        <queue>AIA_Workplan</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Legal_Name__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Kendra Perry</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Benefits_Core_Team_AIA_Workplan_Assignment</fullName>
        <columns>Account_Legal_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Benefits Core Team</label>
        <queue>Benefits_Core_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LGIT_Queue_AIA_Workplan_Assignment</fullName>
        <columns>Account__c</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>NAME</columns>
        <columns>Post_Sales_Implementation__c</columns>
        <columns>Stage__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>MAST Tech Queue</label>
        <queue>AIA_LGIT_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MOCK_IDs</fullName>
        <columns>Account__c</columns>
        <columns>Task_Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_Date_Time__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Date_Accepted__c</columns>
        <columns>Date_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Task_Name__c</field>
            <operation>equals</operation>
            <value>Confirm Mock ID Card Approval Complete</value>
        </filters>
        <label>MOCK IDs</label>
    </listViews>
    <listViews>
        <fullName>MyTeam_s_Assignment_Abubakr_Kukoyi</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Task_Description__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Date_Time__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Abubakr Kukoyi</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Not Required</value>
        </filters>
        <label>MyTeam's Assignment (Abubakr Kukoyi)</label>
        <sharedTo>
            <group>AIA_Manager_Mona_Hebron_Donna_Arbgoast</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyTeam_s_Assignment_Aditya_Singh</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Task_Description__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Date_Time__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Aditya Singh</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Not Required</value>
        </filters>
        <label>MyTeam's Assignment (Aditya Singh)</label>
        <sharedTo>
            <group>AIA_Manager_Phillip_Pope</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyTeam_s_Assignment_Adriene_Gaskins</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Task_Description__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Date_Time__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Adriene Gaskins</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Not Required</value>
        </filters>
        <label>MyTeam's Assignment (Adriene Gaskins)</label>
        <sharedTo>
            <group>AIA_Manager_Michael_Frick</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyTeam_s_Assignment_Aisha_Kane_Washing</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Task_Description__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Assigned_Date_Time__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Aisha Kane-Washington</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Not Required</value>
        </filters>
        <label>MyTeam's Assignment (Aisha Kane-Washing)</label>
        <sharedTo>
            <group>AIA_Manager_Gina_Harrison</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>PRF_Assignment</fullName>
        <active>true</active>
        <label>PRF Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workplan_Assignment</fullName>
        <active>true</active>
        <label>Workplan Assignment</label>
    </recordTypes>
    <validationRules>
        <fullName>EWPA001</fullName>
        <active>true</active>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;
Not($Permission.AIA_Admin_Ignore_Validation_Rules) &amp;&amp;
(AND( ISCHANGED( Due_Date__c ), NOT(OR( $Profile.Name  = 'System Administrator', $User.Id =  CreatedBy.Id ))))</errorConditionFormula>
        <errorMessage>EWPA001: Only Administrators or the creator of an Assignment can change the Due Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWPA001_2</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(Due_Date__c)  &amp;&amp; ($User.Id &lt;&gt; CreatedBy.Id)</errorConditionFormula>
        <errorMessage>EWPA001: Only Administrators or the creator of an Assignment can change the Due Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWPA002</fullName>
        <active>true</active>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(AND(External_Assignee__c != '' , Internal_Assignee__c != null))</errorConditionFormula>
        <errorMessage>EWPA002: Please select only one external or Internal Assignee.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWPA003</fullName>
        <active>true</active>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(ISPICKVAL(PRIORVALUE( Status__c ),"Completed")&amp;&amp; ISCHANGED( Status__c ))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>EWPA003: User cannot change the status once it is "Completed"</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWPA004</fullName>
        <active>true</active>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(ISPICKVAL(PRIORVALUE( Status__c ),"Not Required")&amp;&amp; ISCHANGED( Status__c ))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>EWPA004: User cannot change the status once it is "Not Required"</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWPA005</fullName>
        <active>true</active>
        <description>The assignment can not be set to not required if the assignment is required</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(Workplan_Type_Task__r.Required__c &amp;&amp;  TEXT(Status__c) = 'Not Required')</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>EWPA005: If assignment is required the status can not be set to "Not Required"</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EWPA006</fullName>
        <active>true</active>
        <description>Completed Workplan Assignments cannot be Reassigned</description>
        <errorConditionFormula>AND( OR(ISCHANGED(OwnerId),ISCHANGED( External_Assignee__c )), ISPICKVAL( Status__c , 'Completed')  )</errorConditionFormula>
        <errorMessage>EWPA006: Completed Workplan Assignments cannot be Reassigned</errorMessage>
    </validationRules>
</CustomObject>